renamed all stations

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
         <div class="flex items-center justify-between">
             <div>
                 <h4 class="font-semibold">Station A1</h4>
-                <p class="text-sm text-gray-600">Park Avenue & 5th St</p>
+                <p class="text-sm text-gray-600">Serendra A</p>
             </div>
             <div class="w-3 h-3 bg-green-500 rounded-full"></div>
         </div>
@@ -317,7 +317,7 @@
         <div class="flex items-center justify-between">
             <div>
                 <h4 class="font-semibold">Station B2</h4>
-                <p class="text-sm text-gray-600">Community Center</p>
+                <p class="text-sm text-gray-600">Serendra B</p>
             </div>
             <div class="w-3 h-3 bg-green-500 rounded-full"></div>
         </div>
@@ -326,7 +326,7 @@
         <div class="flex items-center justify-between">
             <div>
                 <h4 class="font-semibold">Station C3</h4>
-                <p class="text-sm text-gray-600">Market Square</p>
+                <p class="text-sm text-gray-600">BGC High Street A</p>
             </div>
             <div class="w-3 h-3 bg-orange-500 rounded-full"></div>
         </div>
@@ -335,7 +335,7 @@
         <div class="flex items-center justify-between">
             <div>
                 <h4 class="font-semibold">Station D4</h4>
-                <p class="text-sm text-gray-600">Riverside Park</p>
+                <p class="text-sm text-gray-600">BGC High Street B</p>
             </div>
             <div class="w-3 h-3 bg-green-500 rounded-full"></div>
         </div>
@@ -344,7 +344,7 @@
         <div class="flex items-center justify-between">
             <div>
                 <h4 class="font-semibold">Station E5</h4>
-                <p class="text-sm text-gray-600">Oak Street Plaza</p>
+                <p class="text-sm text-gray-600">BGC High Street C</p>
             </div>
             <div class="w-3 h-3 bg-green-500 rounded-full"></div>
         </div>
@@ -353,7 +353,7 @@
         <div class="flex items-center justify-between">
             <div>
                 <h4 class="font-semibold">Station F6</h4>
-                <p class="text-sm text-gray-600">University Campus</p>
+                <p class="text-sm text-gray-600">BGC High Street D</p>
             </div>
             <div class="w-3 h-3 bg-green-500 rounded-full"></div>
         </div>
@@ -362,7 +362,7 @@
         <div class="flex items-center justify-between">
             <div>
                 <h4 class="font-semibold">Station G7</h4>
-                <p class="text-sm text-gray-600">Shopping District</p>
+                <p class="text-sm text-gray-600">BGC High Street E</p>
             </div>
             <div class="w-3 h-3 bg-green-500 rounded-full"></div>
         </div>
@@ -371,7 +371,7 @@
         <div class="flex items-center justify-between">
             <div>
                 <h4 class="font-semibold">Station H8</h4>
-                <p class="text-sm text-gray-600">Residential Complex</p>
+                <p class="text-sm text-gray-600">BGC High Street F</p>
             </div>
             <div class="w-3 h-3 bg-green-500 rounded-full"></div>
         </div>
@@ -380,7 +380,7 @@
         <div class="flex items-center justify-between">
             <div>
                 <h4 class="font-semibold">Station I9</h4>
-                <p class="text-sm text-gray-600">Industrial Park</p>
+                <p class="text-sm text-gray-600">Track 30th A</p>
             </div>
             <div class="w-3 h-3 bg-orange-500 rounded-full"></div>
         </div>
@@ -389,7 +389,7 @@
         <div class="flex items-center justify-between">
             <div>
                 <h4 class="font-semibold">Station J10</h4>
-                <p class="text-sm text-gray-600">Waterfront Promenade</p>
+                <p class="text-sm text-gray-600">Track 30th B</p>
             </div>
             <div class="w-3 h-3 bg-green-500 rounded-full"></div>
         </div>
@@ -398,7 +398,7 @@
         <div class="flex items-center justify-between">
             <div>
                 <h4 class="font-semibold">Station K11</h4>
-                <p class="text-sm text-gray-600">Sports Complex</p>
+                <p class="text-sm text-gray-600">Terra 28th A</p>
             </div>
             <div class="w-3 h-3 bg-green-500 rounded-full"></div>
         </div>
@@ -407,7 +407,7 @@
         <div class="flex items-center justify-between">
             <div>
                 <h4 class="font-semibold">Station L12</h4>
-                <p class="text-sm text-gray-600">Hospital District</p>
+                <p class="text-sm text-gray-600">Terra 28th B</p>
             </div>
             <div class="w-3 h-3 bg-orange-500 rounded-full"></div>
         </div>
@@ -585,7 +585,7 @@
                             <div id="qrPlaceholder" class="text-center flex flex-col items-center justify-center w-full h-full">
                                 <i data-lucide="qr-code" class="w-16 h-16 mx-auto mb-2 text-gray-400"></i>
                                 <p class="text-sm text-gray-600">QR Code</p>
-                                <p class="text-xs text-gray-500 mt-1" id="qrStationLabel">Station A1 - Park Ave</p>
+                                <p class="text-xs text-gray-500 mt-1" id="qrStationLabel">Station A1 - Serendra A</p>
                             </div>
                         </div>
                     </div>
@@ -599,18 +599,18 @@
                         <div>
                             <label class="block text-sm font-medium text-gray-700 mb-1">Station Location</label>
                             <select id="stationSelect" class="w-full p-2 border border-gray-300 rounded-lg" onchange="updateQRCode()">
-    <option value="A1">Station A1 - Park Avenue</option>
-    <option value="B2">Station B2 - Community Center</option>
-    <option value="C3">Station C3 - Market Square</option>
-    <option value="D4">Station D4 - Riverside Park</option>
-    <option value="E5">Station E5 - Oak Street Plaza</option>
-    <option value="F6">Station F6 - University Campus</option>
-    <option value="G7">Station G7 - Shopping District</option>
-    <option value="H8">Station H8 - Residential Complex</option>
-    <option value="I9">Station I9 - Industrial Park</option>
-    <option value="J10">Station J10 - Waterfront Promenade</option>
-    <option value="K11">Station K11 - Sports Complex</option>
-    <option value="L12">Station L12 - Hospital District</option>
+    <option value="A1">Station A1 - Serendra A</option>
+    <option value="B2">Station B2 - Serendra B</option>
+    <option value="C3">Station C3 - BGC High Street A</option>
+    <option value="D4">Station D4 - BGC High Street B</option>
+    <option value="E5">Station E5 - BGC High Street C</option>
+    <option value="F6">Station F6 - BGC High Street D</option>
+    <option value="G7">Station G7 - BGC High Street E</option>
+    <option value="H8">Station H8 - BGC High Street F</option>
+    <option value="I9">Station I9 - Track 30th A</option>
+    <option value="J10">Station J10 - Track 30th B</option>
+    <option value="K11">Station K11 - Terra 28th A</option>
+    <option value="L12">Station L12 - Terra 20th B</option>
 </select>
                         </div>
                         
